--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html ng-app="blocJams">
 
 <head lang="en">
@@ -16,9 +17,19 @@
 </head>
 
 <body>
+    <nav class="navbar">
+        <!-- nav bar -->
+        <a href="index.html" class="logo">
+            <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo">
+        </a>
+        <div class="links-container">
+            <a href="collection.html" class="navbar-link">collection</a>
+        </div>
+    </nav>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="/scripts/app.js"></script>
-    
+
+
 </body>
 
 </html>
