--- a/app/index.html
+++ b/app/index.html
@@ -17,16 +17,18 @@
 </head>
 
 <body>
-   <nav class="navbar">
+    <nav class="navbar">
         <!-- nav bar -->
-        <a href="index.html" class="logo">
+        <a ui-sref="index" class="logo">
             <img src="/assets/images/bloc_jams_logo.png" alt="bloc jams logo">
         </a>
         <div class="links-container">
-            <a href="collection.html" class="navbar-link">collection</a>
+            <a ui-sref="collection" class="navbar-link">collection</a>
         </div>
     </nav>
+    <ui-view></ui-view>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
     <script src="/scripts/app.js"></script>
 
 
