--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
     <script src="/scripts/controllers/AlbumCtrl.js"></script>
     <script src="/scripts/controllers/PlayerBarCtrl.js"></script>
     <script src="/scripts/directives/seekBar.js"></script>
+    <script src="/scripts/filters/timecode.js"></script>
 
 
 </body>
